--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,13 +24,13 @@ jobs:
         with:
           images: liuyunhao1578/deformsim
           # generate Docker tags based on the following events/attributes
+          # ref pr ---> will be ignored
+          # semver version ---> 0.1.3
+          # semver major.minor ---> 0.1
           tags: |
-            type=ref,event=tag
             type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=sha
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
