--- a/plb/envs/rope_robot.yml
+++ b/plb/envs/rope_robot.yml
@@ -33,7 +33,7 @@ ENV:
   loss:
     target_path: envs/data/Rope3D-v1.npy
 ROBOTS:
-  - path: tests/data/ur5/ur5.urdf
+  - path: tests/data/ur5/ur5_primitive.urdf
     offset: (0.01, -0.1, 0.0)
 RENDERER:
   camera_pos: (0.5, 2.5, 2.)
